[ubuntu-dev] keep supervisor pid and log files in /tmp

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -1,5 +1,7 @@
 [supervisord]
 nodaemon = true
+logfile = /tmp/supervisord.log
+pidfile = /tmp/supervisord.pid
 [program:sshd]
 command = /usr/sbin/sshd -D
 [program:xvfb]
