[ubuntu-dev] tweak xterm configuration

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -21,5 +21,5 @@ autorestart = true
 environment = DISPLAY=":99"
 [program:xterm]
 user = user
-command = xterm -fullscreen
-environment = DISPLAY=":99",PWD="/home/user"
+command = xterm
+environment = DISPLAY=":99"
