--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -3,7 +3,8 @@ nodaemon = true
 logfile = /tmp/supervisord.log
 pidfile = /tmp/supervisord.pid
 [program:sshd]
-command = /usr/sbin/sshd -D
+user = user
+command = sudo /usr/sbin/sshd -D
 [program:xvfb]
 user = user
 command = /usr/bin/Xvfb :99 -screen 0 1280x864x16 -ac -pn -noreset
