[ubuntu-dev] use a production novnc build in all images

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -17,7 +17,7 @@ command = x11vnc -shared -rfbport 5900 -display :99
 autorestart = true
 [program:novnc]
 user = user
-command = /home/user/.novnc/utils/launch.sh --vnc localhost:5900 --listen 8088
+command = /home/user/.novnc/utils/launch.sh --listen 8088 --vnc localhost:5900 --web ./build/
 [program:fluxbox]
 user = user
 command = fluxbox
