[ubuntu-dev] fix novnc installation

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -17,7 +17,7 @@ command = x11vnc -shared -rfbport 5900 -display :99
 autorestart = true
 [program:novnc]
 user = user
-command = /home/user/.novnc/utils/launch.sh --listen 8088 --vnc localhost:5900 --web ./build/
+command = /home/user/.novnc/utils/launch.sh --listen 8088 --vnc localhost:5900 --web /home/user/.novnc/build
 [program:fluxbox]
 user = user
 command = fluxbox
