--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,111 @@
-version: 2
-jobs:
-  build:
-    branches:
-      only:
-        - master
+defaults: &defaults
+  branches:
+    only:
+      - master
     docker:
       - image: docker:stable
+
+version: 2
+jobs:
+
+  ubuntu-dev:
+    <<: *defaults
     steps:
       - checkout
       - setup_remote_docker
       - run: |
           cd ubuntu-dev
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker pull janx/ubuntu-dev:latest
-          docker pull ubuntu:16.04
           docker build -t janx/ubuntu-dev:latest -f ubuntu-dev.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker push janx/ubuntu-dev:latest
+
+  chromium:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd chromium
+          docker build -t janx/chromium:base -f chromium.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/chromium:base
+
+  firefox-git:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd firefox
+          docker build -t janx/firefox:base -f firefox-git.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/firefox:base
+
+  firefox-hg:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd firefox
+          docker build -t janx/firefox-hg:base -f firefox-hg.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/firefox-hg:base
+
+  janitor:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd janitor
+          docker build -t janx/janitor:base -f janitor.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/janitor:base
+
+  servo:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd servo
+          docker build -t janx/servo:base -f servo.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/servo:base
+
+  thunderbird:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: |
+          cd thunderbird
+          docker build -t janx/thunderbird:base -f thunderbird.dockerfile .
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker push janx/thunderbird:base
+
+workflows:
+  version: 2
+
+  build_and_push:
+    jobs:
+      - ubuntu-dev
+      - chromium
+          requires:
+            - ubuntu-dev
+      - firefox-git
+          requires:
+            - ubuntu-dev
+      - firefox-hg
+          requires:
+            - ubuntu-dev
+      - janitor
+          requires:
+            - ubuntu-dev
+      - servo
+          requires:
+            - ubuntu-dev
+      - thunderbird
+          requires:
+            - ubuntu-dev
