--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,30 +85,39 @@ jobs:
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker push janx/thunderbird:base
 
+defaults: &only-master
+  filters:
+    branches:
+      only: master
+
 workflows:
   version: 2
 
   build_and_push:
-    filters:
-      branches:
-        only: master
     jobs:
-      - ubuntu-dev
+      - ubuntu-dev:
+        <<: *only-master
       - chromium:
         requires:
           - ubuntu-dev
+        <<: *only-master
       - firefox-git:
         requires:
           - ubuntu-dev
+        <<: *only-master
       - firefox-hg:
         requires:
           - ubuntu-dev
+        <<: *only-master
       - janitor:
         requires:
           - ubuntu-dev
+        <<: *only-master
       - servo:
         requires:
           - ubuntu-dev
+        <<: *only-master
       - thunderbird:
         requires:
           - ubuntu-dev
+        <<: *only-master
