--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,20 @@
-version: 2
+version: 2.0
+
 jobs:
-  ubuntu-dev:
+  build:
     docker:
       - image: docker:stable
     steps:
       - checkout
       - setup_remote_docker
       - run: |
-          cd ubuntu-dev
-          docker build -t janx/ubuntu-dev:latest -f ubuntu-dev.dockerfile .
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push janx/ubuntu-dev:latest
+        cd ubuntu-dev
+        docker build -t janx/ubuntu-dev:latest -f ubuntu-dev.dockerfile .
+        docker login -u $DOCKER_USER -p $DOCKER_PASS
+        docker push janx/ubuntu-dev:latest
+
 workflows:
   version: 2
-  build_and_push:
+  build-and-deploy:
     jobs:
-      - ubuntu-dev:
-        filters:
-          branches:
-            only: master
+      - build
