--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.0
 
 jobs:
-  build:
+  ubuntu-dev:
     docker:
       - image: docker:stable
     steps:
@@ -17,4 +17,4 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
+      - ubuntu-dev
