[all] fix circleci workflow configuration C/?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,6 @@ workflows:
   build-and-deploy:
     jobs:
       - ubuntu-dev
-      - chromium
+      - chromium:
+        requires:
+          - ubuntu-dev
