--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.0
 
 jobs:
-  ubuntu-dev:
+  ubuntu_dev:
     docker:
       - image: docker:stable
     steps:
@@ -28,7 +28,7 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - ubuntu-dev
+      - ubuntu_dev
       - chromium:
         requires:
-          - ubuntu-dev
+          - ubuntu_dev
