--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,10 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - ubuntu-dev
+      - ubuntu-dev:
+          filters:
+            branches:
+              only: master
       - chromium:
           requires:
             - ubuntu-dev
