[ubuntu-dev] Add web-terminal interface

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -27,3 +27,7 @@ environment = DISPLAY=":98"
 user = user
 command = xterm
 environment = DISPLAY=":98"
+[program:webterminal]
+user = user
+command = web-terminal --port 8087
+autorestart = true
