--- a/thunderbird/.mozconfig
+++ b/thunderbird/.mozconfig
@@ -1,7 +1,8 @@
 # Thunderbird build options.
 ac_add_options --enable-application=mail
 ac_add_options --enable-calendar
-ac_add_options --disable-crashreporter
 ac_add_options --enable-extensions=default,inspector
+ac_add_options --enable-linker=lld
+ac_add_options --disable-elf-hack
 ac_add_options --with-ccache
 mk_add_options AUTOCLOBBER=1
