Fix daemon user accounts in discourse supervisor

--- a/discourse/supervisord-append.conf
+++ b/discourse/supervisord-append.conf
@@ -1,8 +1,8 @@
 [program:postgres]
-user = user
+user = postgres
 command = /usr/lib/postgresql/9.4/bin/postgres
 autorestart = true
 [program:redis]
-user = user
+user = redis
 command = redis-server /etc/redis/redis.conf
 autorestart = true
