--- a/discourse/supervisord-append.conf
+++ b/discourse/supervisord-append.conf
@@ -1,8 +1,8 @@
 [program:postgres]
-user = postgres
-command = /usr/lib/postgresql/9.4/bin/postgres
+user = user
+command = sudo -u postgres /usr/lib/postgresql/9.4/bin/postgres
 autorestart = true
 [program:redis]
-user = redis
-command = redis-server /etc/redis/redis.conf
+user = user
+command = sudo -u redis redis-server /etc/redis/redis.conf
 autorestart = true
