--- a/discourse/supervisord-append.conf
+++ b/discourse/supervisord-append.conf
@@ -1,6 +1,6 @@
 [program:postgres]
 user = user
-command = sudo -u postgres /usr/lib/postgresql/9.4/bin/postgres
+command = sudo -u postgres /usr/lib/postgresql/9.5/bin/postgres -D /etc/postgresql/9.5/main/
 autorestart = true
 [program:redis]
 user = user
