Fix daemon user accounts in discourse supervisor (#107)

--- a/discourse/supervisord-append.conf
+++ b/discourse/supervisord-append.conf
@@ -1,8 +1,8 @@
 [program:postgres]
 user = user
-command = /usr/lib/postgresql/9.4/bin/postgres
+command = sudo -u postgres /usr/lib/postgresql/9.5/bin/postgres -D /etc/postgresql/9.5/main/
 autorestart = true
 [program:redis]
 user = user
-command = redis-server /etc/redis/redis.conf
+command = sudo -u redis redis-server /etc/redis/redis.conf
 autorestart = true
