[fennec] automatically build and push docker image with circleci 2/2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,9 @@ workflows:
       - chromium:
           requires:
             - ubuntu-dev
+      - fennec:
+          requires:
+            - ubuntu-dev
       - firefox-git:
           requires:
             - ubuntu-dev
