--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,20 @@ jobs:
             ./.circleci/build_image.sh firefox/firefox-hg.dockerfile janitortechnology/firefox-hg
           no_output_timeout: 30m
 
+  kde:
+    docker:
+      - image: docker:stable
+    steps:
+      - checkout
+      - setup_remote_docker
+      - attach_workspace:
+          at: .
+      - run:
+          command: |
+            docker load -i ubuntu-dev.tar
+            git submodule update --rebase --remote kde
+            ./.circleci/build_image.sh kde/dockerfile janitortechnology/kde
+
   rust:
     docker:
       - image: docker:stable
@@ -129,6 +143,9 @@ workflows:
           requires:
             - ubuntu-dev
       - firefox-hg:
+          requires:
+            - ubuntu-dev
+      - kde:
           requires:
             - ubuntu-dev
       - rust:
