[ubuntu-dev] add an empty supervisorctl configuration section

--- a/ubuntu-dev/supervisord.conf
+++ b/ubuntu-dev/supervisord.conf
@@ -2,6 +2,7 @@
 nodaemon = true
 logfile = /tmp/supervisord.log
 pidfile = /tmp/supervisord.pid
+[supervisorctl]
 [program:sshd]
 user = user
 command = sudo /usr/sbin/sshd -D
