--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,20 @@ jobs:
             ./.circleci/build_image.sh firefox/firefox-git.dockerfile janitortechnology/firefox
           no_output_timeout: 30m
 
+  firefox-cinnabar:
+    docker:
+      - image: docker:stable
+    steps:
+      - checkout
+      - setup_remote_docker
+      - attach_workspace:
+          at: .
+      - run:
+          command: |
+            docker load -i ubuntu-dev.tar
+            ./.circleci/build_image.sh firefox/firefox-cinnabar.dockerfile janitortechnology/firefox-cinnabar
+          no_output_timeout: 30m
+
   firefox-hg:
     docker:
       - image: docker:stable
@@ -140,6 +154,9 @@ workflows:
           requires:
             - ubuntu-dev
       - firefox-git:
+          requires:
+            - ubuntu-dev
+      - firefox-cinnabar:
           requires:
             - ubuntu-dev
       - firefox-hg:
